kubernetes/apps/home-automation/homepage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: home-automation
  name: homepage
  labels:
    app: homepage
  annotations:
    reloader.stakater.com/auto: "true"

spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage

    spec:
      serviceAccountName: homepage
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      securityContext:
        fsGroup: 1000

      containers:
        - name: homepage
          image: ghcr.io/gethomepage/homepage:latest
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 3000

          livenessProbe:
            httpGet:
              path: /
              port: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000

          resources:
            requests:
              memory: 512Mi
              cpu: 10m
            limits:
              memory: 512Mi
              cpu: 250m

          volumeMounts:
            - name: homepage-config
              mountPath: /app/config/bookmarks.yaml
              subPath: bookmarks.yaml
            - name: homepage-config
              mountPath: /app/config/docker.yaml
              subPath: docker.yaml
            - name: homepage-config
              mountPath: /app/config/kubernetes.yaml
              subPath: kubernetes.yaml
            - name: homepage-config
              mountPath: /app/config/services.yaml
              subPath: services.yaml
            - name: homepage-config
              mountPath: /app/config/settings.yaml
              subPath: settings.yaml
            - name: homepage-config
              mountPath: /app/config/widgets.yaml
              subPath: widgets.yaml
            - name: homepage-config
              mountPath: /app/config/custom.js
              subPath: custom.js
            - name: homepage-config
              mountPath: /app/config/custom.css
              subPath: custom.css
            - name: homepage-data
              mountPath: /app/config/logs
            - name: homepage-data
              mountPath: /app/config/icons

      volumes:
        - name: homepage-config
          secret:
            secretName: homepage
        - name: homepage-data
          persistentVolumeClaim:
            claimName: homepage-data-pvc
